--- a/SampleMVCApp/Views/Hello/Index.cshtml
+++ b/SampleMVCApp/Views/Hello/Index.cshtml
@@ -6,4 +6,13 @@
     <h1 class="display-4">Index</h1>
     <p>This is sample page.</p>
     <p>@ViewData["Message"]</p>
+    <form method="post" asp-controller="Hello" asp-action="form">
+        <div class="form-group">
+            <label for="msg">Message</label>
+            <input type="text" name="msg" id="msg" class="form-control"/>
+        </div>
+        <div class="form-group">
+            <input type="submit" class="btn btn-primary"/>
+        </div>
+    </form>
 </div>
